--- a/src/css/components/leave.css
+++ b/src/css/components/leave.css
@@ -1,16 +1,5 @@
-.leave-section-adv-box {
+.leave__adverb-box {
   display: none;
-}
-
-.leave-section-title-descr {
-  color: var(--primary-text-color);
-  text-align: center;
-  font-family: Manrope;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24px;
-  margin-bottom: 20px;
 }
 
 .leave-section-input {
@@ -26,10 +15,54 @@
   line-height: 18px;
   margin-bottom: 18px;
   outline: none;
+  transition: border-color var(--transition-time) var(--transition-effect);
 }
 
 .leave-section-input:focus {
   border-color: var(--accent-color);
+}
+
+.leave__radio-btn__icon-check {
+  padding: 2px;
+  box-sizing: content-box;
+  fill: transparent;
+  position: absolute;
+  top: 0;
+  left: -32px;
+  transition: fill var(--transition-time) var(--transition-effect);
+}
+
+.leave__radio-btn__icon-uncheck {
+  padding: 0;
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  border: 2px solid rgba(18, 20, 23, 0.2);
+  box-sizing: content-box;
+  position: absolute;
+  top: 3px;
+  left: -29px;
+}
+
+.leave__radio-btn__label {
+  color: var(--primary-text-color);
+  font-family: Manrope;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: -0.02em;
+  padding-left: 32px;
+}
+
+.leave__radio-btn__label__span {
+  position: relative;
+}
+
+.leave__radio-btn__input:checked
+  + .leave__radio-btn__label
+  .leave__radio-btn__icon-check {
+  fill: var(--accent-color);
 }
 
 .leave-section-textarea {
@@ -76,6 +109,7 @@
   line-height: 24px;
   border: none;
   margin-bottom: 16px;
+  transition: background-color var(--transition-time) var(--transition-effect);
 }
 
 .leave-section-btn:hover,
