--- a/src/partials/leave.html
+++ b/src/partials/leave.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="section leave-section">
   <div class="container">
     <h2 class="section_title">
       Leave an
@@ -9,10 +9,11 @@
       message and we'll get back to you shortly.
     </p>
     <div class="leave-content-group">
-      <div class="leave__adverb-box">
-        <img src="" alt="Young student" class="leave-section-img" />
-        <p>1000</p>
-        <p>
+      <div class="leave__adv-box">
+        <img src="/assets/img/leave/student.png" alt="Student" />
+
+        <p class="leave__abv-box__text-accent">1000</p>
+        <p class="leave__abv-box__text">
           of our online English language lessons! This journey has been full of
           discovery, growth and unforgettable moments, and we are happy to share
           this joyful event with you.
@@ -38,6 +39,7 @@
                 name="teacher"
                 id="maria"
                 value="maria"
+                checked
               />
               <label class="leave__radio-btn__label" for="maria">
                 <span class="leave__radio-btn__label__span">
