fix: section and container

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -35,7 +35,7 @@
         <li class="footer-menu-list-item"><a class="link" href="#teachers">Teachers</a></li>
         <li class="footer-menu-list-item"><a class="link" href="#reviews">Reviews</a></li>
         <li class="footer-menu-list-item"><a class="link" href="#contact-us">Contact us</a></li>
-         <li class="footer-menu-list-item"><a class="link" href="#team">Our team</a></li>
+         <li class="footer-menu-list-item"><a class="link" href="team.html">Our team</a></li>
       </ul>
     </div>
 
