--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -69,7 +69,7 @@
         </li>
       </ul>
     </div>
-    <div class="toggle-switch">
+    <!-- <div class="toggle-switch">
       <p>Light</p>
       <span>
         <label class="switch">
@@ -78,7 +78,7 @@
         </label>
       </span>
       <p>Dark</p>
-    </div>
+    </div> -->
     <!-- start mobile/tablet elements -->
     <div class="header__btn" data-modal-open type="button">
       <svg width="32" height="32" aria-label="Instagram icon">
