--- a/src/partials/proposal.html
+++ b/src/partials/proposal.html
@@ -1,6 +1,9 @@
-<section class="proposal">
+<section class="section proposal">
   <div class="container proposal__wrapper-full">
-    <h2 class="proposal__header-sec">Master the <span class="proposal__accent">Language</span> with Our English Package!</h2>
+    <h2 class="proposal__header-sec">
+      Master the <span class="proposal__accent">Language</span> with Our English
+      Package!
+    </h2>
     <div class="proposal__first-extrabg-wrapper">
       <h3 class="proposal__header-th">Power of English</h3>
       <ul class="proposal__list-eng-pack">
@@ -10,7 +13,9 @@
               <use href="/icons.svg#icon-agree"></use>
             </svg>
           </div>
-          <p class="proposal__paragraph-eng-pack">Dive into captivating lessons designed to stimulate your curiosity.</p>
+          <p class="proposal__paragraph-eng-pack">
+            Dive into captivating lessons designed to stimulate your curiosity.
+          </p>
         </li>
         <li class="proposal__point-eng-pack proposal__second-point">
           <div class="proposal__engpack-icon-wrapper">
@@ -18,7 +23,9 @@
               <use href="/icons.svg#icon-agree"></use>
             </svg>
           </div>
-          <p class="proposal__paragraph-eng-pack">Learn in a nurturing setting where every student's progress matters.</p>
+          <p class="proposal__paragraph-eng-pack">
+            Learn in a nurturing setting where every student's progress matters.
+          </p>
         </li>
         <li class="proposal__point-eng-pack proposal__third-point">
           <div class="proposal__engpack-icon-wrapper">
@@ -26,19 +33,24 @@
               <use href="/icons.svg#icon-agree"></use>
             </svg>
           </div>
-          <p class="proposal__paragraph-eng-pack">Experience the satisfaction of real progress as your 
-            language skills and confidence grow with every session.</p>
+          <p class="proposal__paragraph-eng-pack">
+            Experience the satisfaction of real progress as your language skills
+            and confidence grow with every session.
+          </p>
         </li>
       </ul>
-      <img 
-      class="proposal__first-extrabg-image"
-      srcset="/proposal/tall-stack-of-books.webp 1x,
-      /proposal/tall-stack-of-books@2x.webp 2x"
-      src="/proposal/tall-stack-of-books.webp"
-      alt="tall-stack-of-books" >
-      <button type="button" class="proposal__cta" >Leave an application</button>
+      <img
+        class="proposal__first-extrabg-image"
+        srcset="
+          /proposal/tall-stack-of-books.webp    1x,
+          /proposal/tall-stack-of-books@2x.webp 2x
+        "
+        src="/proposal/tall-stack-of-books.webp"
+        alt="tall-stack-of-books"
+      />
+      <button type="button" class="proposal__cta">Leave an application</button>
     </div>
     <div class="proposal__second-extrabg"></div>
-    <div class="proposal__third-extrabg"></div> 
+    <div class="proposal__third-extrabg"></div>
   </div>
-</section> 
+</section>
