--- a/src/css/components/reviews.css
+++ b/src/css/components/reviews.css
@@ -1,3 +1,82 @@
-.reviews-section{
+.review-comments_list {
+  display: flex;
+  gap: 32px;
+  overflow-block: hidden;
+}
+
+.review-comments_item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
+  width: 100%;
+  height: 100%;
+  background-color: var(--box-bg-color);
+  padding: 32px 16px 40px 16px;
+  border-radius: 30px;
+
+  @media(width < 768px) {
+    padding: 20px;
+    padding-bottom: 40px;
+    border-radius: 16px;
+    gap: 20px;
+  }
+}
+
+.review-comments_item:nth-child(3) {
+  
+  @media(width < 1280px) {
+    display: none;
+  }
+
+  @media(width < 768px) {
+    display: none;
+  }
+}
+
+.review-comments_item:nth-child(2) {
+  @media(width < 768px) {
+    display: none;
+  }
+}
+
+.review-avatar_container {
+  display: flex;
+  gap: 8px;
+  justify-content: flex-start;
+  align-items: center;
   background-color: var(--accent-color);
+  padding: 14px 16px;
+  border-radius: 15px;
+  width: 100%;
+}
+
+.review-avatar_text-container {
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+}
+
+.review-avatar_name {
+  color: var(--white-color);
+  font-size: 20px;
+  line-height: 1.5;
+  letter-spacing: -0.02em;
+}
+
+.review-avatar_description {
+  color: var(--white-color-half-alpha);
+  font-size: 12px;
+  line-height: 1.5;
+}
+
+.review-comments_item_text {
+  font-size: 16px;
+  line-height: 1.5;
+  color: var(--secondary-text-color);
+  width: calc(100% - 32px);
+  @media(width < 768px) {
+    font-size: 14px;
+    width: calc(100% - 34px);
+  }
 }
