--- a/src/css/utils/variables.css
+++ b/src/css/utils/variables.css
@@ -13,6 +13,7 @@
   --footer-bg-color: #121417;
   --main-bg-color: #ffffff;
   --white-color: #ffffff;
+  --white-color-half-alpha: rgba(255, 255, 255, 0.5);
 
   /* Breakpoints */
   --mobile: 375px;
