--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,5 +1,91 @@
 <section class="section reviews-section">
   <div class="container">
-    <p>reviews</p>
+    <h2 class="section_title">
+      What our <span class="lesson-title-span">students</span> say
+    </h2>
+
+    <p class="section_subtitle section_subtitle_center">
+      Hear from our students about their learning journey with us, as they share their experiences, progress, and the
+      transformative impact
+    </p>
+
+    <div class="wrapper">
+      <ul class='review-comments_list'>
+        <li class='review-comments_item'>
+          <div class="review-avatar_container">
+            <img srcset="/assets/img/review/anna@1x.png 1x, /assets/img/review/anna@2x.png 2x"
+             src="/assets/img/review/anna@1x" alt="girls avatar"
+             width="50" height="50" class="review-avatar_image">
+            <div class="review-avatar_text-container">
+              <h3 class="review-avatar_name">Anna</h3>
+              <p class="review-avatar_description">Student</p>
+            </div>
+          </div>
+          <p class='review-comments_item_text'>
+            My experience at the language school has been nothing short of amazing. The teachers are dedicated and the learning
+            environment is stimulating. I feel more confident in my English skills.
+          </p>
+        </li>
+
+        <li class='review-comments_item'>
+          <div class="review-avatar_container">
+            <img srcset="/assets/img/review/anna@1x.png 1x, /assets/img/review/anna@2x.png 2x" src="/assets/img/review/anna@1x"
+              alt="girls avatar" width="50" height="50" class="review-avatar_image">
+            <div class="review-avatar_text-container">
+              <h3 class="review-avatar_name">Anna</h3>
+              <p class="review-avatar_description">Student</p>
+            </div>
+          </div>
+          <p class='review-comments_item_text'>
+            My experience at the language school has been nothing short of amazing. The teachers are dedicated and the learning
+            environment is stimulating. I feel more confident in my English skills.
+          </p>
+        </li>
+
+        <li class='review-comments_item'>
+          <div class="review-avatar_container">
+            <img srcset="/assets/img/review/anna@1x.png 1x, /assets/img/review/anna@2x.png 2x" src="/assets/img/review/anna@1x"
+              alt="girls avatar" width="50" height="50" class="review-avatar_image">
+            <div class="review-avatar_text-container">
+              <h3 class="review-avatar_name">Anna</h3>
+              <p class="review-avatar_description">Student</p>
+            </div>
+          </div>
+          <p class='review-comments_item_text'>
+            My experience at the language school has been nothing short of amazing. The teachers are dedicated and the learning
+            environment is stimulating. I feel more confident in my English skills.
+          </p>
+        </li>
+        
+      
+        <!-- <li class='review-comments_item'>
+          <div class="review-avatar_container">
+            <img srcset="/assets/img/review/mykhailo@1x.png 1x, /assets/img/review/mykhailo@2x.png 2x"
+             src="/assets/img/review/mykhailo@1x" alt="mans avatar"
+             width="50" class="review-avatar_image">
+            <h3 class="review-avatar_name">Mykhailo</h3>
+            <p class="review-avatar_description">Student</p>
+          </div>
+          <p class='review-comments_item_text'>
+            The school offers a great balance of language theory and practical exercises. The personalized feedback from the
+            teachers has helped me improve my weak areas.
+          </p>
+        </li>
+      
+        <li class='review-comments_item'>
+          <div class="review-avatar_container">
+            <img srcset="/assets/img/review/mykhailo@1x.png 1x, /assets/img/review/mykhailo@2x.png 2x"
+             src="/assets/img/review/mykhailo@1x" alt="girls avatar"
+             width="50" class="review-avatar_image">
+            <h3 class="review-avatar_name">Victoria</h3>
+            <p class="review-avatar_description">Student</p>
+          </div>
+          <p class='review-comments_item_text'>
+            I love the dynamic and interactive teaching methods used here. It's a great place to learn English in a fun and
+            effective way. I have definitely seen a big improvement in my language skills.
+          </p>
+        </li> -->
+      </ul>
+    </div>
   </div>
 </section>
