remove team link

--- a/src/css/layout/footer.css
+++ b/src/css/layout/footer.css
@@ -11,7 +11,7 @@
 /* } */
 
 .footer {
-  background-color: var(--primary-text-color:);
+  background-color: var(--primary-text-color);
 }
 
 /* The main container for the footer */
@@ -66,7 +66,7 @@
 
 .social-media-link {
   padding: 8px;
-  border: ;
+  /* border: ; */
 }
 
 
