--- a/src/partials/teachers.html
+++ b/src/partials/teachers.html
@@ -12,8 +12,8 @@
       <li class="teacher-list__item">
         <div class="avatar">
           <img
-            srcset="/assets/img/teachers/Maria@2x.png 2x"
-            src="/assets/img/teachers/Maria.png"
+            srcset="/assets/img/teachers/Maria@2x.jpg 2x"
+            src="/assets/img/teachers/Maria.jpg"
             alt="Maria"
           />
         </div>
@@ -26,8 +26,8 @@
       <li class="teacher-list__item">
         <div class="avatar">
           <img
-            srcset="/assets/img/teachers/Artem@2x.png 2x"
-            src="/assets/img/teachers/Artem.png"
+            srcset="/assets/img/teachers/Artem@2x.jpg 2x"
+            src="/assets/img/teachers/Artem.jpg"
             alt="Artem"
           />
         </div>
@@ -40,8 +40,8 @@
       <li class="teacher-list__item">
         <div class="avatar">
           <img
-            srcset="/assets/img/teachers/Ilona@2x.png 2x"
-            src="/assets/img/teachers/Ilona.png"
+            srcset="/assets/img/teachers/Ilona@2x.jpg 2x"
+            src="/assets/img/teachers/Ilona.jpg"
             alt="Ilona"
           />
         </div>
@@ -55,8 +55,8 @@
       <li class="teacher-list__item">
         <div class="avatar">
           <img
-            srcset="/assets/img/teachers/Volodymyr@2x.png 2x"
-            src="/assets/img/teachers/Volodymyr.png"
+            srcset="/assets/img/teachers/Volodymyr@2x.jpg 2x"
+            src="/assets/img/teachers/Volodymyr.jpg"
             alt="Volodymyr"
           />
         </div>
