--- a/src/css/components/hero.css
+++ b/src/css/components/hero.css
@@ -29,7 +29,11 @@
   margin-inline: auto;
 }
 
-.hero__button {
+.link__leave-an-application {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   width: 295px;
   height: 52px;
 
@@ -42,15 +46,21 @@
   border-radius: 12px;
   border: none;
   background: var(--accent-color);
+
+  transition: background-color var(--transition-time) var(--transition-effect)
+    0ms;
 }
 
-.hero__button:hover,
-.hero__button:focus {
+.link__leave-an-application:hover,
+.link__leave-an-application:focus {
   background-color: #38ae5f;
 }
 
-.hero__link {
-  display: block;
+.hero__scroll {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   width: 38px;
   height: 38px;
 
@@ -60,11 +70,25 @@
 
   border-radius: 50%;
   background-color: var(--main-bg-color);
+
+  transition: background-color var(--transition-time) var(--transition-effect)
+    0ms;
 }
 
-.hero__link:hover,
-.hero__link:focus {
+.hero__scroll--down {
+  fill: var(--accent-color);
+  transition: fill transform var(--transition-time) var(--transition-effect) 0ms;
+}
+
+.hero__scroll:hover,
+.hero__scroll:focus {
+  transform: translateY(1px);
   background-color: var(--accent-color);
+}
+
+.hero__scroll:hover .hero__scroll--down,
+.hero__scroll:focus .hero__scroll--down {
+  fill: var(--white-color);
 }
 
 .hero__bg-image {
@@ -112,7 +136,7 @@
     line-height: 1.17;
   }
 
-  .hero__button {
+  .link__leave-an-application {
     width: 306px;
     height: 60px;
     color: var(--white-color);
@@ -120,11 +144,16 @@
     line-height: 1.56;
   }
 
-  .hero__link {
+  .hero__scroll {
     width: 48px;
     height: 48px;
     bottom: 32px;
     right: 32px;
+  }
+
+  .hero__scroll--down {
+    width: 24px;
+    height: 24px;
   }
 
   .hero__bg-image {
