--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -69,16 +69,7 @@
         </li>
       </ul>
     </div>
-    <!-- <div class="toggle-switch">
-      <p>Light</p>
-      <span>
-        <label class="switch">
-          <input class="theme-switch" type="checkbox" />
-          <span class="slider round"></span>
-        </label>
-      </span>
-      <p>Dark</p>
-    </div> -->
+
     <!-- start mobile/tablet elements -->
     <div class="header__btn" data-modal-open type="button">
       <svg width="32" height="32" aria-label="Instagram icon">
@@ -87,3 +78,14 @@
     </div>
   </div>
 </header>
+
+<div class="toggle-switch">
+  <p>Light</p>
+  <span>
+    <label class="switch">
+      <input class="theme-switch" type="checkbox" />
+      <span class="slider round"></span>
+    </label>
+  </span>
+  <p>Dark</p>
+</div>
