--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,15 +1,23 @@
-<section class='hero'>
-  <div class='hero__container hero__bg-image'>
-    <div class='hero__content'>
-      <h1 class="hero__title">Discover the joy of learning <span class="hero__title--accent">English</span> with us!
+<section class="hero">
+  <div class="hero__container hero__bg-image">
+    <div class="hero__content">
+      <h1 class="hero__title">
+        Discover the joy of learning
+        <span class="hero__title--accent">English</span> with us!
       </h1>
-      <a class="link link__leave-an-application" href="#leave">Leave an application</a>
-      <a class="link hero__scroll" href="#footer">
-        <svg class="hero__scroll--down" width="20" height="20" aria-label="scroll down icon">
+      <a class="link link__leave-an-application" href="#leave"
+        >Leave an application</a
+      >
+      <a class="link hero__scroll" href="#about-us">
+        <svg
+          class="hero__scroll--down"
+          width="20"
+          height="20"
+          aria-label="scroll down icon"
+        >
           <use href="/public/icons.svg#icon-arrow"></use>
         </svg>
       </a>
     </div>
   </div>
-
 </section>
