--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,4 @@
-<section class="hero">
+<section id="hero" class="hero">
   <div class="hero__container hero__bg-image">
     <div class="hero__content">
       <h1 class="hero__title">
