--- a/src/partials/leave.html
+++ b/src/partials/leave.html
@@ -1,4 +1,4 @@
-<section class="section leave-section">
+<section id="leave" class="section leave-section">
   <div class="container">
     <h2 class="section_title">
       Leave an
