--- a/src/partials/proposal.html
+++ b/src/partials/proposal.html
@@ -1,4 +1,4 @@
-<section class="section proposal">
+<section id="proposal" class="section proposal">
   <div class="container proposal__wrapper-full">
     <h2 class="proposal__header-sec">
       Master the <span class="proposal__accent">Language</span> with Our English
