--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header id="header" class="header">
   <div class="container header__wrapper">
     <div class="">
       <p class="logo">english<span class="logo--accent">excellence</span>.</p>
