--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -1,16 +1,16 @@
-<section class="section section-team">
-  <div class="container team-wrapper">
-    <div class="team">
-      <h2 class="team-title">Meet our <span>team</span></h2>
-      <p class="team-subtitle">
+<section class="section team__section">
+  <div class="container team__wrapper">
+    <div class="team__wrapper">
+      <h2 class="team__title">Meet our <span>team</span></h2>
+      <p class="team__subtitle">
         Welcome to the English Excellence team project page! This one-page
         website project aims to create an excellent English learning experience
         for our users. Each participant made a valuable contribution to the
         creation of this project.
       </p>
-      <div class="team-cards">
-        <div class="swiper-container">
-          <div class="swiper-wrapper"></div>
+      <div class="team__cards">
+        <div class="team__cards-container">
+          <div class="team__cards-wrapper"></div>
         </div>
       </div>
     </div>
