--- a/src/partials/lessons.html
+++ b/src/partials/lessons.html
@@ -1,7 +1,7 @@
 <section class="section lessons__section" id="lessons">
   <div class="container lessons__container">
     <h2 class="lessons__title">
-      Our <span class="lessons__title-span">lessonss</span>
+      Our <span class="lessons__title-span">lessons</span>
     </h2>
     <p class="lessons__title-text">
       Our lessonss are carefully structured and interactive, designed to promote
