--- a/src/css/layout/footer.css
+++ b/src/css/layout/footer.css
@@ -1,47 +1,31 @@
-/* @font-face { */
-/* font-family: 'Manrope'; */
-/* src: url('fonts/Manrope-Regular.woff2') format('woff2'), */
-/* url('fonts/Manrope-Regular.woff') format('woff'); */
-/* font-weight: 400; */
-/* font-style: normal; */
-/* } */
-/*  */
-/* body { */
-/* font-family: 'Manrope', sans-serif; */
-/* } */
+/* The first column containing the logo and contact info */
 
 .footer {
-  background-color: var(--primary-text-color:);
+  padding-top: 64px;
+  /* 32/40 */
+  background-color: var(--primary-text-color);
+  color: var(--white-color);
+  padding-bottom: 16px;
 }
 
-/* The main container for the footer */
-.footer-container {
+.footer__container.container {
+  padding-bottom: 110px;
+}
+
+.footer__container {
   display: flex;
   justify-content: space-between;
-
   color: var(--white-color);
   padding-top: 64px;
   padding-bottom: 64px;
-  border-bottom: 1px rgba(255, 255, 255, 0.10);
-
+  border-bottom: 1px solid rgba(255, 255, 255, 0.10);
+  padding-bottom: 110px;
 }
 
-.logotype {
-  color: var(--white-color);
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-}
-
-.logotype-right-accent {
-  color: var(--accent-color);
-}
-
-.footer-contact-list-item {
+.footer__contact__list__item {
   display: flex;
   flex-direction: column;
-  color: var(---footer-light-text-color);
+  color: var(--footer-light-text-color);
   font-size: 14px;
   /* font-style: normal; */
   font-weight: 400;
@@ -49,13 +33,8 @@
   letter-spacing: -0.02em;
 }
 
-.label,
-.value {
-  display: block;
-}
-
-.footer-contact-list-item a {
-  color: #FFF;
+.footer__contact__list__item a {
+  color: var(--white-color);
   font-size: 14px;
   /* font-style: normal; */
   font-weight: 600;
@@ -63,97 +42,50 @@
   text-decoration: none;
 }
 
-
-.social-media-link {
-  padding: 8px;
-  border: ;
+.label,
+.value {
+  display: block;
 }
-
-
-/* The first column containing the logo and contact info */
-/* .footer-logo-tel-address { */
-/* flex: 1; */
-/* } */
 
 /* The second column containing menu items */
-/* .footer-menu { */
-/* flex: 1; */
-/* } */
-/*  */
-/* .footer-menu-list { */
-/* list-style: none; */
-/* padding-left: 0; */
-/*  */
-/* } */
+.footer__menu__link:hover,
+.footer__menu__link:focus {
+  color: var(--accent-color);
+}
 
-/* The third column containing social media icons */
-.footer-social-media {
-  /* flex: 1; */
+.footer__social__list {
   display: flex;
-  justify-content: space-between;
-
   align-items: center;
-  gap: 8px;
-
+  /* justify-content: flex-start; */
+  /* gap: 10px; */
+  gap: 12px;
+  /* list-style: none; */
 }
 
-.social-media-contacts-list {
-  list-style: none;
-  /* padding-left: 0; */
+.footer__social__link {
+  padding: 8px;
   display: flex;
-
-}
-
-.social-contact-icon {
-  opacity: 0.8;
+  justify-content: center;
   border-radius: 10px;
-  border: 1px solid var(--menubar-selection-background, rgba(255, 255, 255, 0.10));
+  border: 1px solid rgba(255, 255, 255, 0.10);
+  transition: border var(--transition-effect), var(--transition-time);
 }
 
-
-
-
-
-/* For the footer line and copyright and terms */
-.copyright-privacy-terms {
-  display: flex;
-  justify-content: space-between;
-  border-top: 1px solid #ccc;
-  padding-top: 10px;
+.footer__social__link:hover .footer__social__icon,
+.sfooter__social__link:focus .footer__social__icon {
+  fill: var(--accent-color);
 }
 
-.footer-container {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+.footer__social__icon {
+  width: 28px;
+  height: 28px;
+  fill: var(--white-color);
+
 }
 
-.footer-logo-tel-address,
-.footer-menu,
-.footer-social-media {
-  flex: 1;
-  flex-basis: calc(33.333% - 10px);
-  flex-shrink: 0;
-}
-
-.footer-contact-list,
-.footer-menu-list,
-.social-media-contacts-list {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-.social-media-contacts-list {
-  display: flex;
-  justify-content: flex-start;
-  gap: 10px;
-}
-
-.copyright-privacy-terms {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
+.footer__social__link:hover,
+.sfooter__social__link:focus {
+  border: 1px solid var(--light-accent-color);
 }
 
 .footer-left,
@@ -162,4 +94,50 @@
   text-align: left;
   text-align: right;
 
+}
+
+
+/* For the footer line and copyright and terms */
+.copyright-privacy-terms.container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  border-top: 1px solid #ccc;
+  padding-top: 10px;
+  width: 100%;
+
+}
+
+.top-row {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.link-container {
+  display: flex;
+  gap: 10px;
+}
+
+.copyright-text,
+.powered-by,
+.terms-link,
+.privacy-link {
+  margin: 5px;
+}
+
+.small-text {
+  color: rgba(255, 255, 255, 0.60);
+  font-family: Manrope;
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.125rem;
+  /* 128.571% */
+  letter-spacing: -0.0175rem;
+  opacity: 0.9;
+}
+
+.copyright-privacy-terms-team {
+  padding-top: 110px;
 }
