--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -1,8 +1,10 @@
 <section class="section team__section">
   <div class="container team__wrapper">
     <div class="team__wrapper">
-      <h2 class="team__title">Meet our <span>team</span></h2>
-      <p class="team__subtitle">
+      <h2 class="section__title team__title">
+        Meet our <span class="section__title--span">team</span>
+      </h2>
+      <p class="section__subtitle section__subtitle--center team__subtitle">
         Welcome to the English Excellence team project page! This one-page
         website project aims to create an excellent English learning experience
         for our users. Each participant made a valuable contribution to the
