--- a/src/css/components/proposal.css
+++ b/src/css/components/proposal.css
@@ -94,7 +94,10 @@
     }
 
     .proposal__first-extrabg-wrapper .proposal__cta {
-        max-width: 255px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 255px;
         width: 100%;
         height: 52px;
         border-radius: 12px;
@@ -251,7 +254,10 @@
     }
 
     .proposal__first-extrabg-wrapper .proposal__cta {
-        min-width: 306px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 306px;
         max-height: 60px;
         border-radius: 12px;
         border: none;
@@ -408,11 +414,14 @@
     }
 
     .proposal__first-extrabg-wrapper .proposal__cta {
-        min-width: 306px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 306px;
         height: 60px;
+        padding: 16px 64px;
         border-radius: 12px;
         border: none;
-        padding: 0;
         background-color: var(--accent-color);
         margin-top: 39px;
         color: var(--white-color);
