fix: scroll up background

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -8,7 +8,7 @@
       <a class="link link__leave-an-application" href="#leave"
         >Leave an application</a
       >
-      <a class="link hero__scroll" href="#about-us">
+      <a class="link hero__scroll" href="#footer">
         <svg
           class="hero__scroll--down"
           width="20"
