--- a/src/css/layout/footer.css
+++ b/src/css/layout/footer.css
@@ -3,8 +3,8 @@
 .footer {
   padding-top: 64px;
   /* 32/40 */
-  background-color: var(--primary-text-color);
-  color: var(--white-color);
+  background-color: var(--footer-bg-color);
+  color: var(--footer-primary-text-color);
   padding-bottom: 16px;
 }
 
@@ -15,17 +15,21 @@
 .footer__container {
   display: flex;
   justify-content: space-between;
-  color: var(--white-color);
+  color: var(--footer-primary-text-color);
   padding-top: 64px;
   padding-bottom: 64px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.10);
   padding-bottom: 110px;
 }
 
+.footer__contact__list {
+  padding-top: 32px;
+}
+
 .footer__contact__list__item {
   display: flex;
   flex-direction: column;
-  color: var(--footer-light-text-color);
+  color: var(--footer-secondary-text-color);
   font-size: 14px;
   /* font-style: normal; */
   font-weight: 400;
@@ -34,7 +38,7 @@
 }
 
 .footer__contact__list__item a {
-  color: var(--white-color);
+  color: var(--footer-primary-text-color);
   font-size: 14px;
   /* font-style: normal; */
   font-weight: 600;
@@ -47,7 +51,15 @@
   display: block;
 }
 
+.footer__contact__list>li:first-child {
+  margin-bottom: 16px;
+}
+
 /* The second column containing menu items */
+.footer__menu__list__item+.footer__menu__list__item {
+  margin-top: 20px;
+}
+
 .footer__menu__link:hover,
 .footer__menu__link:focus {
   color: var(--accent-color);
@@ -56,10 +68,7 @@
 .footer__social__list {
   display: flex;
   align-items: center;
-  /* justify-content: flex-start; */
-  /* gap: 10px; */
   gap: 12px;
-  /* list-style: none; */
 }
 
 .footer__social__link {
@@ -79,7 +88,7 @@
 .footer__social__icon {
   width: 28px;
   height: 28px;
-  fill: var(--white-color);
+  fill: var(--footer-primary-text-color);
 
 }
 
@@ -120,10 +129,20 @@
 }
 
 .copyright-text,
-.powered-by,
+.our-team-link,
 .terms-link,
 .privacy-link {
   margin: 5px;
+}
+
+.our-team-link:hover,
+.our-team-link:focus,
+.terms-link:hover,
+.terms-link:focus,
+.privacy-link:hover,
+.privacy-link:focus {
+  color: var(--accent-color);
+  transition: color var(--transition-effect), var(--transition-time);
 }
 
 .small-text {
@@ -140,4 +159,26 @@
 
 .copyright-privacy-terms-team {
   padding-top: 110px;
+}
+
+.our-team-link .small-text,
+.privacy-link .small-text {
+  text-transform: capitalize;
+}
+
+/* Set color for hovering over the li and its child elements */
+.footer__contact__list__item:hover,
+.footer__contact__list__item:hover .value,
+.footer__contact__list__item:hover .value a {
+  color: var(--accent-color);
+  transition: color var(--transition-effect), var(--transition-time);
+}
+
+/* Set a different color specifically for .label on hover over the li */
+.label {
+  transition: color var(--transition-effect) var(--transition-time);
+}
+
+.footer__contact__list__item:hover .label {
+  color: var(--light-accent-color);
 }
