--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -129,13 +129,9 @@
           <a class="privacy-link small-text" href="/privacy-policy"
             >Privacy Policy</a
           >
+          <a class="our-team-link small-text" href="#">Our Team</a>
         </div>
       </div>
-      <p class="powered-by small-text">
-        Powered by HTML/CSS/JS, Developed by
-        <a href="team.html"
-          ><span class="logo--accent">Name of our Team 7</span></a
-        >
       </p>
     </div>
   </div>
